# ml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.test  Makefile  README.md  docker-compose.perf.yml  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py
.agent/: context.yaml
.github/workflows/: ci.yml  quality-checks.yml  release.yml
airflow_dags/: __init__.py  embedding_reindex_pipeline.py  ml_training_pipeline.py
data_integration/: __init__.py  connectors.py
deployment/: blue-green-deploy.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  EMBEDDING_STRATEGY.md  MODEL_LIFECYCLE.md  SEARCH_DESIGN.md  VECTOR_STORE_MIGRATION.md
explainability/: model_explainer.py
k8s/base/: configmap.yaml  embedding-service.yaml  mlflow-server.yaml  model-serving.yaml  namespace.yaml  search-service.yaml  secret.yaml
k8s/production/: blue-green-ingress.yaml  configmap.yaml  namespace.yaml  production-secrets.yaml
libs/: __init__.py
libs/common/: __init__.py  auth.py  config.py  events.py  logging.py  metrics.py  security.py  tracing.py
libs/vector_store/: __init__.py  base.py  dual_write.py  factory.py  opensearch.py  pgvector.py
monitoring/: drift_detection.py
monitoring/prometheus/: alerts.yml
performance/: __init__.py  benchmark.py  profiler.py
scripts/: __init__.py  build_all.sh  init_db.sql  init_db_dynamic.py  migrate_add_meta_column.sql  migrate_vector_dimension.sql  opensearch_bootstrap.py  prepare_test_env.py  promote_model.py  reindex_all.py  run_contract_integration_tests.py  sync_specs.py
security/: setup-vault.sh  vault-config.hcl  vault-policies.hcl
service-embedding/: Dockerfile  requirements.txt  service-manifest.yaml
service-embedding/app/: __init__.py  main.py
service-embedding/app/api/: __init__.py  routes.py
service-embedding/app/batching/: __init__.py  gpu_detector.py
service-embedding/app/encoders/: __init__.py  embedding_manager.py
service-embedding/app/pipelines/: __init__.py  retry_handler.py
service-embedding/app/runtime/: __init__.py  metrics.py
service-indexer-worker/: Dockerfile  requirements.txt  service-manifest.yaml
service-indexer-worker/app/: __init__.py  main.py
service-indexer-worker/app/runtime/: __init__.py  metrics.py
service-indexer-worker/app/workers/: __init__.py  indexer_worker.py
service-mlflow/: Dockerfile  requirements.txt  service-manifest.yaml
service-mlflow/config/: mlflow.conf
service-model-serving/: Dockerfile  requirements.txt  service-manifest.yaml
service-model-serving/app/: __init__.py  main.py
service-model-serving/app/adapters/: __init__.py  circuit_breaker.py
service-model-serving/app/api/: __init__.py  routes.py
service-model-serving/app/loaders/: __init__.py  model_loader.py
service-model-serving/app/runtime/: __init__.py  ensemble_manager.py  metrics.py  model_manager.py
service-model-serving/app/streaming/: __init__.py  stream_processor.py
service-search/: Dockerfile  requirements.txt  service-manifest.yaml
service-search/app/: __init__.py  main.py
service-search/app/api/: __init__.py  routes.py
service-search/app/hybrid/: __init__.py  search_manager.py
service-search/app/intelligence/: __init__.py  query_understanding.py
service-search/app/ranking/: __init__.py  fusion.py
service-search/app/retrievers/: __init__.py  cache_manager.py
service-search/app/runtime/: __init__.py  metrics.py
tests/: __init__.py  test_common.py  test_vector_store.py
tests/contract/: __init__.py  test_api_contracts.py
tests/integration/: __init__.py  test_event_flow.py  test_ml_pipeline.py
tests/load/: __init__.py  locustfile.py
training/: __init__.py  requirements.txt
training/curve_forecaster/: __init__.py  data_generator.py  evaluate.py  model.py  train.py
training/embeddings/: __init__.py  financial_embedding_model.py
